[gd_scene load_steps=4 format=3 uid="uid://by3t4cj58aqh7"]

[ext_resource type="Script" uid="uid://bmrb32yogxde8" path="res://scripts/ui/GymHub.gd" id="1_d3a6v"]
[ext_resource type="Script" uid="uid://bn6hp8voyikr8" path="res://scripts/core/TrainingSystem.gd" id="2_yogjq"]
[ext_resource type="Script" uid="uid://cdxybojcabrnp" path="res://scripts/core/CalendarSystem.gd" id="3_slykc"]

[node name="GymHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 106.0
offset_top = 74.0
offset_right = 106.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3a6v")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -68.0
offset_right = 50.0
offset_bottom = 68.0
grow_vertical = 2

[node name="TrainButton" type="Button" parent="Actions"]
layout_mode = 2
text = "Train"

[node name="RestButton" type="Button" parent="Actions"]
layout_mode = 2
text = "Rest"

[node name="ShowButton" type="Button" parent="Actions"]
layout_mode = 2
text = "Show"

[node name="TourButton" type="Button" parent="Actions"]
layout_mode = 2
text = "Tour"

[node name="TrainingSystem" type="Node" parent="."]
script = ExtResource("2_yogjq")
metadata/_custom_type_script = "uid://bn6hp8voyikr8"

[node name="CalendarSystem" type="Node" parent="."]
script = ExtResource("3_slykc")
metadata/_custom_type_script = "uid://cdxybojcabrnp"

[node name="ModalLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
